--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ body {
 .convert {
   filter: drop-shadow(0px 20px 200px rgba(57, 23, 119, 0.05));
 }
+
+.subscribe {
+  background: linear-gradient(180deg, #2b076e 0%, #0d0d2b 100%);
+}
